# pygeos-macos-shapely-incompatibility

./: pyproject.toml
.github/workflows/: test-and-publish.yaml
pygeos_macos_shapely_incompatibility/: main.py
tests/: test_main.py
