[tool.poetry]
name = "pygeos-macos-shapely-incompatibility"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
geopandas = "~0.10.0"
pygeos = "~0.10.0"
pandas = "~1.3"
shapely = "~1.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
